<resources>
    <string name="app_name">FitsMe</string>
    <string name="app_common_error">Неизвестная ошибка</string>
    <string name="internet_connection_error">Ошибка интернет соединения</string>
    <string name="login_already_in_use_error">Логин занят, попробуйте другой</string>
    <string name="login_incorrect_error">Логин должен содержать не менее 3 символов</string>
    <string name="login_or_password_error">Неверный логин или пароль</string>
    <string name="password_incorrect_error">Пароль должен содержать не менее 6 символов</string>
    <string name="password_not_valid_error">Пароль введён неверно</string>
    <string name="server_internal_error">Внутреняя ошибка сервера</string>
    <string name="loading">Загрузка&#8230;</string>
    <string name="error">Ошибка</string>
    <string name="sign_up">Регистрация</string>
    <string name="sign_in">Войти</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="brand_name_hint_in_two_lines">Название бренда \nв две строки</string>
    <string name="clothe_name_hint">Название товара</string>
    <string name="clothe_price_hint">7000 P</string>
    <string name="to_cart">В корзину</string>
    <string name="clothe_in_cart">Товар в корзине</string>
    <string name="set_your_size">Укажите ваш размер</string>
    <string name="set_your_sizes">Укажите ваши размеры</string>
    <string name="set_your_top_sizes">Укажите ваши размеры верха</string>
    <string name="set_your_bottom_sizes">Укажите ваши размеры низа</string>
    <string name="no_match_size">Нет вашего размера</string>
    <string name="no_items_in_favourites">Нет товаров в избранном</string>
    <string name="no_items_go_to_rate_btn_text">Продолжить просмотр товаров</string>
    <string name="favourites_no_items_text">Вы можете сохранять вещи,\nнажав сердечко под товаром</string>
    <string name="no_items_in_cart">В корзине нет товаров</string>
    <string name="cart_no_item_go_to_favourite_btn_text">Перейти в избранное</string>
    <string name="cart_proceed_to_checkout_btn_text">Перейти к оформлению</string>
    <string name="cart_remove_no_match_size_btn_text">Удалить вещи не по размеру</string>
    <string name="cart_total_price_label">Итого:</string>
    <string name="cart_delivery_cost_label">Доставка:</string>
    <string name="cart_amount_value">%1$s\u20BD</string>
    <string name="cart_user_agreement_1">Нажимая кнопку \"Получить код\", вы соглашаетесь с политикой обработки персональных данных и принимаете публичную оферту. </string>
    <string name="cart_user_agreement_2"><u>Подробнее.</u></string>
    <string name="cart_fragment_message_for_size_dialog">Вещь может быть заказана только после указания ваших размеров</string>
    <string name="screen_title_checkout_order">Оформление заказа</string>
    <string name="checkout_mobile_phone_number">Мобильный телефон</string>
    <string name="checkout_delivery_address">Адрес доставки</string>
    <string name="checkout_first_warning_message">Доставка осуществляется только в пределах МКАД в течение 3-5 дней</string>
    <string name="checkout_second_warning_message">Оплата производится курьеру наличными или по карте</string>
    <string name="checkout_hint_phone_number">+7</string>
    <string name="checkout_hint_enter_city">Укажите город</string>
    <string name="checkout_hint_enter_street">Укажите улицу</string>
    <string name="checkout_hint_enter_house_number">Укажите дом</string>
    <string name="checkout_hint_enter_flat_number">Укажите квартиру</string>
    <string name="checkout_price_label">Товаров на сумму</string>
    <string name="checkout_delivery_cost_label">Стоимость доставки</string>
    <string name="checkout_total_price_label">Итого</string>
    <string name="btn_checkout_order">Оформить заказ</string>
    <string name="warning_phone_number_is_not_filled">Номер телефона не заполнен</string>
    <string name="checkout_warning_some_fields_is_empty">Все поля должны быть заполнены</string>
    <string name="checkout_dialog_title">Ваш заказ отправлен на обработку</string>
    <string name="checkout_dialog_content">Вы можете посмотреть историю заказов вашем профиле</string>
    <string name="checkout_dialog_error_title">При отправке запроса на обработку возникла ошибка</string>
    <string name="menu_items">Главный</string>
    <string name="menu_favourites">Избранное</string>
    <string name="menu_cart">Корзина</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_rate_items_return">Вернуться</string>
    <string name="menu_rate_items_dislike">Не нравиться</string>
    <string name="menu_rate_items_like">Нраиться</string>
    <string name="menu_rate_items_filter">Фильтр</string>
    <string name="currency_sign">P</string>
    <string name="like">like</string>
    <string name="item_info_item_description_text">Описание:</string>
    <string name="item_info_item_content_text">Состав:</string>
    <string name="item_info_brand_name_text">Название бренда</string>
    <string name="item_info_item_name_text">Название товара</string>
    <string name="end_of_not_viewed_list">Список вещей закончился</string>
    <string name="image_loading_error">Ошибка загрузки изображения</string>
    <string name="item_favourite_deleted_item_deleted">Товар удален</string>
    <string name="item_favourite_removed_undo_tv">Вернуть</string>
    <string name="item_info_load_error">Error</string>
    <string name="item_info_load_in_process">loading</string>
    <string name="no_internet_error">Нет подключения к сети. \nПроверьте соединение с интернетом</string>
    <string name="profile_your_size">Ваши размеры</string>
    <string name="profile_your_type">Ваш цветотип</string>
    <string name="profile_orders_history">История заказов</string>
    <string name="profile_orders_return">Возврат</string>
    <string name="profile_leave_feedback">Оставить отзыв</string>
    <string name="profile_logout">Выход</string>
    <string name="fragment_change_size_title">Изменить размеры</string>
    <string name="fragment_change_size_top_size_layout_title">Верх</string>
    <string name="top_chest_size">Обхват груди</string>
    <string name="top_waist_size">Обхват талии</string>
    <string name="top_hips_size">Обхват бёдер</string>
    <string name="top_sleeve_size">Длина рукава</string>
    <string name="fragment_change_size_bottom_size_layout_title">Низ</string>
    <string name="bottom_waist_size">Обхват талии</string>
    <string name="bottom_hips_size">Обхват бёдер</string>
    <string name="undefined_size_type">" "</string>
    <string name="international_sie_type">Международные размеры</string>
    <string name="russia_size_type">Российские размеры</string>
    <string name="europe_size_type">Европейские размеры</string>
    <string name="france_size_type">Французские размеры</string>
    <string name="italy_size_type">Итальянские размеры</string>
    <string name="usa_size_type">Размеры США</string>
    <string name="uk_size_type">Размеры Великобритании</string>
    <string name="profile_message_to_user_set_bottom_size">Установите нижний размер</string>
    <string name="profile_message_to_user_saving">Сохранение</string>
    <string name="profile_message_to_user_saving_complete">Изменения сохранены</string>
    <string name="profile_message_to_user_set_top_size">Установите верхний размер</string>
    <string name="favourites_fragment_message_for_size_dialog">Вы сможете добавить вещь в корзину после того, как укажете ваш размер</string>
    <string name="rateitems_fragment_message_for_size_dialog">Так вы сможете просматривать только подходящие вам по размеру вещи</string>
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="screen_title_orders_return">Список возвратов</string>
    <string name="returns_empty_list_title">Вы не оформляли возврат</string>
    <string name="returns_empty_list_message">Товар подлежит возврату\nв течение 14 дней со дня доставки.</string>
    <string name="returns_button_create_new_return">Оформить возврат</string>
    <string name="returns_number_tv">Заказ #%1$s</string>
    <string name="returns_status_title">Статус:</string>
    <string name="returns_amount_title">Количество товаров:</string>
    <string name="returns_amount_value">%1$s шт.</string>
    <string name="returns_price_title">Сумма:</string>
    <string name="returns_price_value">%1$s руб.</string>
    <string name="returns_calculation_method_title">Метод расчёта:</string>
    <string name="returns_requisites_title">Реквизиты:</string>
    <string name="returns_days_for_returns_title">Время на возврат:</string>
    <string name="returns_days_for_returns_value">%1$s дней</string>
    <string name="returns_how_to_header">Как оформить возврат</string>
    <string name="returns_choose_order_header">Выберите заказ</string>
    <string name="returns_choose_items_header">Выберите вещи</string>
    <string name="returns_indicate_number_header">Укажите трек-номер</string>
    <string name="returns_billing_info_header">Платёжные данные</string>
    <string name="returns_verify_data_header">Проверьте данные</string>
    <string name="returns_details_header">Детали возврата</string>
    <string name="returns_how_to_header_text">Товар, заказанный на FitsMe и не подошедший по каким-либо причинам (форма, габариты, фасон, расцветка, размер и комплектация), может быть возвращен в течение 14 дней, не считая дня покупки.</string>
    <string name="returns_how_to_text_with_list">Для осуществления возврата нужно выполнить следующие действия:\n\n1. Выберите заказ из списка;\n\n2. Отметьте вещи, которые хотите вернуть;\n\n3. Отправьте товар;\n\n4. Укажите код отслеживания полученный в отделении почты;\n\n5. Укажите реквизиты для платежа;\n\n6. Ожидайте уведомление о поступлении товара на склад. После этого денежные средства будут возмещены на вашу банковскую карту.</string>
    <string name="returns_order_date">Дата заказа: %1$s</string>
    <string name="returns_order_days_for_returns">Время на возврат: %1$s дней</string>
    <string name="returns_order_item_price">%1$s руб.</string>
    <string name="returns_indicate_number_text">Отправьте вещи для возврата Почтой России. Там выполучите трек-номер для отслеживания — он указан на чеке.</string>
    <string name="returns_billing_info_header_text">Номер банковской карты</string>
    <string name="returns_billing_info_text">Как только вещи поступят на наш склад, денежные средства будут возмещены на вашу банковскую карту.</string>
    <string name="warning_indicate_number_is_not_filled">Трек-номер не заполнен</string>
    <string name="warning_card_number_is_not_filled">Номер карточки не заполнен</string>
    <string name="returns_button_formalize_return">Оформить возврат</string>
    <string name="returns_button_next">Далее</string>
    <string name="returns_button_to_returns">К списку возвратов</string>
    <string name="returns_button_continue">Продолжить оформление</string>
    <string name="returns_list_text">Список товаров:</string>
    <string name="feedback_btn_leave_feedback">Оставить отзыв</string>
    <string name="feedback_field_name">Ваше имя</string>
    <string name="feedback_field_email">Электронная почта</string>
    <string name="feedback_field_message">Ваше сообщение</string>
    <string name="feedback_hint_enter_name">Введите Ваше имя</string>
    <string name="feedback_hint_enter_email">example@domain.ru</string>
    <string name="feedback_hint_enter_message">Введите здесь текст Вашего сообщения.\nВопросы, предложения, пожелания.</string>
    <string name="phone_auth_input_phone">Для входа в приложение введите номер телефона</string>
    <string name="phone_auth_code_default">+7</string>
    <string name="phone_auth_number_hint">(123)456-78-90</string>
    <string name="auth_get_code">Получить код</string>
    <string name="wrong_phone_number">Некорректный номер телефона</string>
</resources>