<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/rate_items_action_return"
        android:icon="@drawable/rate_items_return_normal"
        android:title="@string/menu_rate_items_return"
        app:showAsAction="always" />

    <item
        android:id="@+id/rate_items_action_dislike"
        android:icon="@drawable/rate_items_dislike_normal"
        android:title="@string/menu_rate_items_dislike"
        app:showAsAction="always" />

    <item
        android:id="@+id/rate_items_action_like"
        android:icon="@drawable/rate_items_like_pressed"
        android:title="@string/menu_rate_items_like"
        app:showAsAction="always" />

    <item
        android:id="@+id/rate_items_action_filter"
        android:icon="@drawable/rate_items_filter_pressed"
        android:title="@string/menu_rate_items_filter"
        app:showAsAction="always" />

</menu>