<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="ru.fitsme.android.presentation.fragments.checkout.CheckoutViewModel" />

        <variable
            name="bindingEvents"
            type="ru.fitsme.android.presentation.fragments.checkout.CheckoutBindingEvents" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <include
            android:id="@+id/app_bar"
            layout="@layout/layout_app_bar" />

        <TextView
            android:id="@+id/fragment_checkout_loading_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/loading"
            android:textSize="@dimen/text_size_16sp"
            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/btn_next"
            android:layout_below="@id/app_bar"
            android:visibility="@{viewModel.isLoading ? View.GONE : View.VISIBLE}">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_8dp"
                    android:text="@string/checkout_mobile_phone_number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/delivery_address_field_height"
                    android:hint="@string/checkout_hint_phone_number"
                    android:inputType="phone"
                    android:textSize="@dimen/text_size_18sp"
                    tools:ignore="Autofill" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_8dp"
                    android:layout_marginBottom="@dimen/padding_8dp"
                    android:text="@string/checkout_delivery_address"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/address_city"
                        style="@style/CheckoutTextFieldStyle"
                        android:layout_marginEnd="@dimen/padding_16dp"
                        android:hint="@string/checkout_hint_enter_city"
                        android:text="@={viewModel.orderModel.city}"
                        tools:ignore="Autofill" />

                    <EditText
                        android:id="@+id/address_street"
                        style="@style/CheckoutTextFieldStyle"
                        android:layout_marginStart="@dimen/padding_16dp"
                        android:hint="@string/checkout_hint_enter_street"
                        android:text="@={viewModel.orderModel.street}"
                        tools:ignore="Autofill" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/address_house"
                        style="@style/CheckoutNumberFieldStyle"
                        android:layout_marginEnd="@dimen/padding_16dp"
                        android:hint="@string/checkout_hint_enter_house_number"
                        android:text="@={viewModel.orderModel.houseNumber}"
                        tools:ignore="Autofill" />

                    <EditText
                        android:id="@+id/address_apartment"
                        style="@style/CheckoutNumberFieldStyle"
                        android:layout_marginStart="@dimen/padding_16dp"
                        android:hint="@string/checkout_hint_enter_flat_number"
                        android:text="@={viewModel.orderModel.apartment}"
                        tools:ignore="Autofill" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_16dp"
                    android:layout_marginBottom="@dimen/padding_8dp"
                    android:text="@string/checkout_first_warning_message"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/delivery_address_warning_text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_8dp"
                    android:layout_marginBottom="@dimen/padding_16dp"
                    android:text="@string/checkout_second_warning_message"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/delivery_address_warning_text" />

                <RelativeLayout
                    android:id="@+id/cart_proceed_to_checkout_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/cart_price_label"
                        style="@style/CartPriceLabelStyle"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/checkout_price_label" />

                    <TextView
                        android:id="@+id/cart_price_value"
                        style="@style/CartPriceValueStyle"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:text="@{@string/cart_amount_value(viewModel.orderModel.price)}"
                        tools:text="14300 P" />

                    <TextView
                        android:id="@+id/cart_delivery_cost_label"
                        style="@style/CartPriceLabelStyle"
                        android:layout_below="@id/cart_price_label"
                        android:layout_alignParentStart="true"
                        android:text="@string/checkout_delivery_cost_label" />

                    <TextView
                        android:id="@+id/cart_delivery_cost_value"
                        style="@style/CartPriceValueStyle"
                        android:layout_below="@id/cart_price_value"
                        android:layout_alignParentEnd="true"
                        android:text="@{@string/cart_amount_value(viewModel.orderModel.discount)}"
                        tools:text="0 P" />

                    <TextView
                        android:id="@+id/cart_total_price_label"
                        style="@style/CartPriceLabelStyle"
                        android:layout_below="@id/cart_delivery_cost_label"
                        android:layout_alignParentStart="true"
                        android:text="@string/checkout_total_price_label"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/cart_total_price_value"
                        style="@style/CartPriceValueStyle"
                        android:layout_below="@id/cart_delivery_cost_value"
                        android:layout_alignParentEnd="true"
                        android:text="@{@string/cart_amount_value(viewModel.orderModel.totalPrice)}"
                        tools:text="14300 P" />
                </RelativeLayout>

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btn_next"
            style="@style/BottomButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/padding_16dp"
            android:onClick="@{() -> bindingEvents.onClickMakeOrder()}"
            android:text="@string/btn_checkout_order" />
    </RelativeLayout>
</layout>
