<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="bindingEvents"
            type="ru.fitsme.android.presentation.fragments.feedback.FeedbackBindingEvents" />

        <variable
            name="viewModel"
            type="ru.fitsme.android.presentation.fragments.feedback.FeedbackViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include
            android:id="@+id/app_bar"
            layout="@layout/layout_app_bar" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            tools:visibility="visible" />

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/btn_send_feedback"
            android:layout_below="@id/app_bar"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ru.fitsme.android.presentation.fragments.feedback.FeedbackFieldView
                    android:id="@+id/field_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:fieldHint="@string/feedback_hint_enter_name"
                    app:fieldLabel="@string/feedback_field_name"
                    app:inputType="textPersonName" />

                <ru.fitsme.android.presentation.fragments.feedback.FeedbackFieldView
                    android:id="@+id/field_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:fieldHint="@string/feedback_hint_enter_email"
                    app:fieldLabel="@string/feedback_field_email"
                    app:inputType="textEmailAddress" />

                <ru.fitsme.android.presentation.fragments.feedback.FeedbackScrollFieldView
                    android:id="@+id/field_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:fieldHint="@string/feedback_hint_enter_message"
                    app:fieldLabel="@string/feedback_field_message"
                    app:inputType="textMultiLine" />
            </LinearLayout>
        </ScrollView>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/fragment_main_bottom_shadow"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_above="@id/btn_send_feedback"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/bottom_shadow"
            android:scaleType="fitXY" />

        <Button
            android:id="@+id/btn_send_feedback"
            style="@style/BottomButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/padding_32dp"
            android:layout_marginTop="@dimen/padding_8dp"
            android:layout_marginEnd="@dimen/padding_32dp"
            android:layout_marginBottom="@dimen/padding_8dp"
            android:enabled="@{!viewModel.isLoading}"
            android:onClick="@{() -> bindingEvents.onClickSendFeedback()}"
            android:text="@string/feedback_btn_leave_feedback" />
    </RelativeLayout>

</layout>
