<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="bindingEvents"
            type="ru.fitsme.android.presentation.fragments.checkout.FinishOrderDialogFragmentEvents" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_32dp"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingTop="24dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="22dp"
            android:text="@string/checkout_dialog_title"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18sp" />

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:text="@string/checkout_dialog_content"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_12sp" />

        <Button
            android:id="@+id/ok_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="-20dp"
            android:background="@null"
            android:onClick="@{() -> bindingEvents.onOkButtonClicked()}"
            android:text="@string/ok"
            android:textColor="@color/colorPrimaryDark" />

    </RelativeLayout>

</layout>
