<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="ru.fitsme.android.presentation.fragments.auth.NumberViewModel" />

        <variable
            name="bindingEvents"
            type="ru.fitsme.android.presentation.fragments.auth.NumberBindingEvents" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fragment_phone_auth_input_phone_tv"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:gravity="center_horizontal"
            android:text="@string/phone_auth_input_phone"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16sp"
            app:layout_constraintBottom_toTopOf="@id/fragment_phone_auth_number_et"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/fragment_phone_auth_code_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_layout"
            android:drawablePadding="4dp"
            android:hint="@string/phone_auth_code_default"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:minWidth="20dp"
            android:padding="4dp"
            android:text="@string/phone_auth_code_default"
            android:textAlignment="viewEnd"
            android:textSize="@dimen/text_size_20sp"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_phone_auth_number_et"
            app:layout_constraintEnd_toStartOf="@+id/fragment_phone_auth_number_et"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/fragment_phone_auth_number_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="@drawable/rounded_layout"
            android:hint="@string/phone_auth_number_hint"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:padding="4dp"
            android:textSize="@dimen/text_size_20sp"
            app:layout_constraintBottom_toTopOf="@+id/fragment_phone_auth_get_code_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/fragment_phone_auth_code_et"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/fragment_phone_auth_get_code_btn"
            android:layout_width="290dp"
            android:layout_height="40dp"
            android:background="@drawable/bg_rounded_corners_primary_dark_btn"
            android:onClick="@{() -> bindingEvents.onGetCodeClicked()}"
            android:text="@string/auth_get_code"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_phone_auth_number_et"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/fragment_phone_auth_wrong_num_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@{viewModel.message}"
            android:textSize="@dimen/text_size_12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_phone_auth_get_code_btn"
            tools:text="@string/wrong_phone_number" />

        <LinearLayout
            android:id="@+id/fragment_phone_auth_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> bindingEvents.onAgreementClicked()}"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_phone_auth_get_code_btn">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_32dp"
                android:layout_marginEnd="@dimen/padding_32dp"
                android:gravity="center"
                android:text="@string/cart_user_agreement_1"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/cart_user_agreement_2"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_10sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>


